Page MenuHome GnuPG

pinentry gtk2 should grab pointer as well as keyboard
Closed, ResolvedPublic

Description

pinentry-gtk-2 can occasionally get stuck in interactions with some window
managers where the keyboard input no longer works. It looks like grabbing the
pointer as well as the keyboard would probably prevent this.

For more details and examples, please see: https://bugs.debian.org/831626

Details

Version
0.9.7

Event Timeline

dkg set Version to 0.9.7.
dkg added a subscriber: dkg.
justus claimed this task.
justus added a subscriber: justus.

Fixed in 2f1f1f06.

Grabbing the pointer might have unexpected repercussions though, e.g. one isn't
able to move windows around anymore. Let's see how it turns out.